--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
+    "json": "^9.0.6",
     "mongoose": "^4.9.6",
     "nvm": "0.0.4",
     "react": "^15.4.2",
